--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Стартовая</title>
   <meta charset="utf-8">
   <title>Куда пойти — Москва глазами Артёма</title>
 
@@ -40,7 +39,9 @@
     }
   </style>
  
-  {{ places|json_script:"places-geojson" }}
+  <script id="places-geojson" type="application/json">
+    {{ places|safe }}
+  </script>
 
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
